管理员教学楼的增删改查功能实现

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,6 +141,12 @@
 	
 </script>
 <script>
+	
+	//cocoMessage全局配置参数
+	cocoMessage.config({
+	    duration: 2000,
+	});
+	
     layui.use(['jquery', 'layer', 'miniAdmin','miniTongji'], function () {
         var $ = layui.jquery,
             layer = layui.layer,
