优化与修改

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,7 +82,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
-                    <a href="javascript:;" data-bgcolor="配色方案"><i class="fa fa-ellipsis-v"></i></a>
+                    <a href="javascript:;" data-bgcolor="主题"><i class="fa fa-ellipsis-v"></i></a>
                 </li>
             </ul>
         </div>
@@ -142,21 +142,32 @@
 </script>
 <script>
 	
-	//cocoMessage全局配置参数
-	cocoMessage.config({
-		duration:2000,
-	});
+	
+    // var cocoMessage;
+    //cocoMessage全局配置参数
+    cocoMessage.config({
+        duration:2000,
+    });
 	
     layui.use(['jquery', 'layer', 'miniAdmin','miniTongji'], function () {
         var $ = layui.jquery,
             layer = layui.layer,
             miniAdmin = layui.miniAdmin,
             miniTongji = layui.miniTongji;
+            // var cocoMessage = layui.cocoMessage;
 			
+            //兼容开发模式直接运行网页
+            let url = 'query/test.do';
+            let method = 'post';
+            if(location.port == '5500') {
+                url = 'http://localhost:5500/api/test.json';
+                method = 'get';
+            }
+
 			$.ajax({
 				// url:"system/getUserInfo.do",
-				url:"query/test.do",
-				type:"post",
+				url:url,
+				type:method,
 				dataType:"json",
 				success:function (data) {
 					if (!data.success) {
@@ -222,4 +233,10 @@
 			})
         });
     });
+
+    window.onload = function() {
+        console.log(cocoMessage);
+        // cocoMessage.error();
+
+    }
 </script>
