修改接口 增加学生端欢迎页面功能

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -157,7 +157,7 @@
             // var cocoMessage = layui.cocoMessage;
 			
             //兼容开发模式直接运行网页
-            let url = 'query/test.do';
+            let url = 'query/list/test.do';
             let method = 'post';
             if(location.port == '5500') {
                 url = 'http://localhost:5500/api/test.json';
