添加教学评价功能 添加教学评价数据库表

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,9 @@
 			window.top.location=window.location;
 		}
 		var $ = layui.$;
-		var GLOBAL = {};
+		var GLOBAL = {
+            map:new Map()
+        };
 	</script>
 </head>
 <body class="layui-layout-body layuimini-all">
